--- a/styles/project-pages.css
+++ b/styles/project-pages.css
@@ -247,6 +247,7 @@
 .lightbox-caption h3 {
     font-size: 2rem;
     margin-bottom: 1rem;
+    color: #8B4513;
 }
 
 .lightbox-caption .description {
