--- a/styles/main.css
+++ b/styles/main.css
@@ -566,6 +566,12 @@ footer::before {
 .project-image {
     width: 100%;
     height: 200px;
+    overflow: hidden;
+}
+
+.project-image img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
